# bootstrap.c

./: bootstrap.sublime-project  cookiecutter.json  {{cookiecutter.project_name|lower}}.sublime-project
{{cookiecutter.project_name|lower}}/: Makefile.am  README.md  configure.ac
{{cookiecutter.project_name|lower}}/src/: Makefile.am  sample.c  sample.h  {{cookiecutter.project_name|lower}}.c  {{cookiecutter.project_name|lower}}.h
{{cookiecutter.project_name|lower}}/test/: sample_test.c  sample_test.cpp
